--- a/src/app/user/pages/user-dashboard/user-dashboard.component.html
+++ b/src/app/user/pages/user-dashboard/user-dashboard.component.html
@@ -9,7 +9,7 @@
   <div>
     <button class="btn-secondary" [disabled]="buttonDisabled" (click)="disableFetch()">Refresh
         <small *ngIf="timer$ | async as timer">
-          <span *ngIf="buttonDisabled">({{6 - timer}})</span>
+          <span *ngIf="buttonDisabled">({{11 - timer}})</span>
         </small>
     </button>
   </div>
@@ -52,6 +52,18 @@
         </mat-card-footer>
       </mat-card>
     </ng-template>
+  </div>
+
+  <div class="flex-container" *ngIf="subscriptionsError$ | async">
+    <mat-card class="card">
+      <mat-card-header>
+      </mat-card-header>
+      <mat-card-content>
+        <p> {{ subscriptionsError$ | async }} </p>
+      </mat-card-content>
+      <mat-card-footer>
+      </mat-card-footer>
+    </mat-card>
   </div>
 
 </div>
